# poc_pub_sub

./: .gitignore  README.md  pingpong_pb2.py  pingpong_pb2_grpc.py  pyproject.toml  redis.md
.github/workflows/: code-quality.yml
asyncio_playground/: example.py
fast_api/: pyproject.toml
flask_app/: Dockerfile  aioredis_example.py  consumer.py  docker-compose.yml  kombu_example.py  my_app.py  publisher.py  pyproject.toml
flask_app/flask_app/: kombu_test.py  publisher.py
flask_app/tests/: __init__.py  test_flask_app.py
flask_calculations/: pyproject.toml
flask_calculations/tests/: test_flask_calculations.py
flask_service/: pyproject.toml
flask_service/tests/: test_flask_service.py
