[tool.poetry]
name = "poc_pub_sub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.1.3"
kombu = "^5.2.3"
aioredis = "^2.0.1"
async-timeout = "^4.0.2"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pre-commit = "^2.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
