[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["jgrugru <jeff.gruenbaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
