[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["jgrugru <jeff.gruenbaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kombu = "^5.2.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
